--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,9 @@ html {
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, sans-serif;
-  background-color: #000;
+  background-color: #131313;
   color: #fff;
-  overflow-x: hidden;
+  overflow-x: hidden; /* 가로 스크롤 방지 */
 }
 
 a,
@@ -22,33 +22,48 @@ button {
 /* Header */
 .header {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-between; /* 로고와 내비게이션 양쪽 정렬 */
   align-items: center;
   padding: 20px 40px;
-  background-color: #000;
+  background-color: #131313;
   font-size: 18px;
 }
 
 .header .logo {
-  font-weight: bold;
-  font-size: 22px;
+  font-weight: lighter;
+  font-size: 24px;
   cursor: pointer;
 }
 
 .navigation button {
-  margin-left: 20px;
+  margin-left: 32px;
   font-size: 16px;
 }
+
+/* 호버시 어두워지게 하고 싶은데 뭔가 안댐..
+.nav {
+  width: 100%;
+  padding-top: 100%;
+  background-color: #fff;
+  position: relative;
+  display: block;
+  cursor: pointer;
+}
+
+.nav:hover {
+  color: #aaa;
+}
+ */
 
 /* Introduction Section */
 .intro {
   text-align: center;
-  padding: 60px 20px;
+  padding: 128px 64px 64px;
   overflow: hidden;
 }
 
 .intro h1 {
-  font-size: 48px;
+  font-size: 152px;
   font-weight: bold;
   margin-bottom: 20px;
   opacity: 0;
@@ -57,47 +72,55 @@ button {
 }
 
 .intro h1 span {
-  font-size: 24px;
+  font-size: 128px;
+  font-weight: normal;
+}
+
+.intro h1 span span {
+  font-size: 100px;
   font-weight: normal;
 }
 
 .intro p {
+  text-align: left;
+  font-weight: lighter;
   font-size: 16px;
+  color: #aaa;
   line-height: 1.6;
-  max-width: 600px;
-  margin: 0 auto 40px;
+  max-width: 800px;
+  margin: 164px auto 24px -24px;
 }
 
 .scroll-down {
-  font-size: 24px;
+  font-size: 40px;
+  opacity: 50%;
   animation: bounce 2s infinite;
   cursor: pointer;
 }
 
 /* Projects Section */
 .projects {
-  text-align: center;
-  padding: 40px 20px;
+  text-align: left;
+  padding: 40px 40px;
 }
 
 .projects h2 {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 40px;
+  font-size: 40px;
+  font-weight: normal;
+  margin-bottom: 16px;
 }
-
+/* 이미지 그리드 설정*/
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  max-width: 960px;
   margin: 0 auto;
 }
 
 .box {
   width: 100%;
   padding-top: 100%;
-  background-color: #ccc;
+  background-color: #fff;
   position: relative;
   display: block;
   cursor: pointer;
